--- a/src/main/resource/view/Category.xml
+++ b/src/main/resource/view/Category.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE Categories SYSTEM "../dtd/Category.dtd">
+<!DOCTYPE Categories SYSTEM "../dtd/Categories.dtd">
 
 <Categories>
     <Category categoryName="AUTHOR_TYPE" bizName="成员类型" bizType="项目" fromBiz="0"/>
